@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.85 2007-09-20 04:01:05 cmatsuoka Exp $
+$Id: ChangeLog,v 1.86 2007-09-20 21:29:13 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -11,6 +11,7 @@ Stable versions
 	- fixed Quadra Composer vibrato, offset and jump effects
 	- fixed endianism problem in KSM and Zen Packer loaders
 	- fixed transposition of Digital Tracker module notes
+	- fixed build for QNX Neutrino 6.3.2
 	- prowizard code cleanup
 
 2.2.1 (20070917)
